--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 flask = "==1.1.1"
 gunicorn = "==19.9.0"
+Flask-Mail = "==0.9.1"
 
 [requires]
 python_version = "3.8"
